// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDataFooter.ts should disable last page button if no items 1`] = `
<div class="v-data-footer">
  <div class="v-data-footer__select">
    Items per page:
    <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
         aria-label="Items per page:"
    >
      <div class="v-input__control">
        <div role="button"
             aria-haspopup="listbox"
             aria-expanded="false"
             aria-owns="list-74"
             class="v-input__slot"
        >
          <div class="v-select__slot">
            <div class="v-select__selections">
              <div class="v-select__selection v-select__selection--comma">
                10
              </div>
              <input aria-label="Items per page:"
                     aria-readonly="false"
                     autocomplete="off"
                     id="input-74"
                     readonly
                     type="text"
              >
            </div>
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append">
                <i class="v-icon notranslate theme--light material-icons"
                   aria-hidden="true"
                >
                </i>
              </div>
            </div>
            <input type="hidden"
                   value="10"
            >
          </div>
          <div class="v-menu">
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-data-footer__pagination">
    –
  </div>
  <div class="v-data-footer__icons-before">
    <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            disabled
            aria-label="First page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
    <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            disabled
            aria-label="Previous page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
  </div>
  <div class="v-data-footer__icons-after">
    <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            disabled
            aria-label="Next page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
    <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            disabled
            aria-label="Last page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`VDataFooter.ts should render first & last icons with showFirstLastPage 1`] = `
<div class="v-data-footer">
  <div class="v-data-footer__select">
    Items per page:
    <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
         aria-label="Items per page:"
    >
      <div class="v-input__control">
        <div role="button"
             aria-haspopup="listbox"
             aria-expanded="false"
             aria-owns="list-32"
             class="v-input__slot"
        >
          <div class="v-select__slot">
            <div class="v-select__selections">
              <div class="v-select__selection v-select__selection--comma">
                10
              </div>
              <input aria-label="Items per page:"
                     aria-readonly="false"
                     autocomplete="off"
                     id="input-32"
                     readonly
                     type="text"
              >
            </div>
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append">
                <i class="v-icon notranslate theme--light material-icons"
                   aria-hidden="true"
                >
                </i>
              </div>
            </div>
            <input type="hidden"
                   value="10"
            >
          </div>
          <div class="v-menu">
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-data-footer__pagination">
    2-10 of 100
  </div>
  <div class="v-data-footer__icons-before">
    <button class="v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            aria-label="First page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
    <button class="v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            aria-label="Previous page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
  </div>
  <div class="v-data-footer__icons-after">
    <button class="v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            aria-label="Next page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
    <button class="v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            aria-label="Last page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`VDataFooter.ts should render in RTL mode 1`] = `
<div class="v-data-footer">
  <div class="v-data-footer__select">
    Items per page:
    <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
         aria-label="Items per page:"
    >
      <div class="v-input__control">
        <div role="button"
             aria-haspopup="listbox"
             aria-expanded="false"
             aria-owns="list-14"
             class="v-input__slot"
        >
          <div class="v-select__slot">
            <div class="v-select__selections">
              <div class="v-select__selection v-select__selection--comma">
                10
              </div>
              <input aria-label="Items per page:"
                     aria-readonly="false"
                     autocomplete="off"
                     id="input-14"
                     readonly
                     type="text"
              >
            </div>
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append">
                <i class="v-icon notranslate theme--light material-icons"
                   aria-hidden="true"
                >
                </i>
              </div>
            </div>
            <input type="hidden"
                   value="10"
            >
          </div>
          <div class="v-menu">
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-data-footer__pagination">
    2-10 of 100
  </div>
  <div class="v-data-footer__icons-before">
    <button class="v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            aria-label="First page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
    <button class="v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            aria-label="Previous page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
  </div>
  <div class="v-data-footer__icons-after">
    <button class="v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            aria-label="Next page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
    <button class="v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            aria-label="Last page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`VDataFooter.ts should render with custom itemsPerPage 1`] = `
<div class="v-data-footer">
  <div class="v-data-footer__select">
    Items per page:
    <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
         aria-label="Items per page:"
    >
      <div class="v-input__control">
        <div role="button"
             aria-haspopup="listbox"
             aria-expanded="false"
             aria-owns="list-2"
             class="v-input__slot"
        >
          <div class="v-select__slot">
            <div class="v-select__selections">
              <div class="v-select__selection v-select__selection--comma">
                100
              </div>
              <input aria-label="Items per page:"
                     aria-readonly="false"
                     autocomplete="off"
                     id="input-2"
                     readonly
                     type="text"
              >
            </div>
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append">
                <i class="v-icon notranslate theme--light material-icons"
                   aria-hidden="true"
                >
                </i>
              </div>
            </div>
            <input type="hidden"
                   value="100"
            >
          </div>
          <div class="v-menu">
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-data-footer__pagination">
    2-10 of 100
  </div>
  <div class="v-data-footer__icons-before">
    <button class="v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            aria-label="Previous page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
  </div>
  <div class="v-data-footer__icons-after">
    <button class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            disabled
            aria-label="Next page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`VDataFooter.ts should show current page if has showCurrentPage 1`] = `
<div class="v-data-footer">
  <div class="v-data-footer__select">
    Items per page:
    <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
         aria-label="Items per page:"
    >
      <div class="v-input__control">
        <div role="button"
             aria-haspopup="listbox"
             aria-expanded="false"
             aria-owns="list-62"
             class="v-input__slot"
        >
          <div class="v-select__slot">
            <div class="v-select__selections">
              <div class="v-select__selection v-select__selection--comma">
                10
              </div>
              <input aria-label="Items per page:"
                     aria-readonly="false"
                     autocomplete="off"
                     id="input-62"
                     readonly
                     type="text"
              >
            </div>
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append">
                <i class="v-icon notranslate theme--light material-icons"
                   aria-hidden="true"
                >
                </i>
              </div>
            </div>
            <input type="hidden"
                   value="10"
            >
          </div>
          <div class="v-menu">
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-data-footer__pagination">
    2-10 of 100
  </div>
  <div class="v-data-footer__icons-before">
    <button class="v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            aria-label="Previous page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
  </div>
  <span>
    4
  </span>
  <div class="v-data-footer__icons-after">
    <button class="v-btn v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
            type="button"
            aria-label="Next page"
    >
      <span class="v-btn__content">
        <i class="v-icon notranslate theme--light material-icons"
           aria-hidden="true"
        >
        </i>
      </span>
    </button>
  </div>
</div>
`;
